# pyudas

./: .gitignore  LICENSE  README.md  load_ascii_format2.py  load_ascii_format3.py  load_aws.py  load_ionosonde.py  load_mu_rass.py  netcdf_to_tplot.py  pyproject.toml  setup.py
examples/: all_cases.ipynb  gallery.ipynb  quickstart.ipynb
iugonet/: __init__.py  ascii_to_tplot.py  config.py  download_txt.py  load.py  load_ascii_format2.py  load_ascii_format3.py  load_aws.py  load_ionosonde.py  load_mu_rass.py  netcdf_to_tplot.py  nn.py  sample_script.txt  test.py
iugonet/ground/: __init__.py  asi_nipr.py  ask_nipr.py  avon_vlfb.py  aws_rish.py  blr_rish.py  ear.py  eiscat.py  eiscat_vief.py  elf_hokudai.py  fits_to_tplot.py  gaia_cpl_nc.py  gaia_gcm_nc.py  gmag_icswse_iaga.py  gmag_magdas_1sec.py  gmag_mm210.py  gmag_nipr.py  gmag_nipr_induction.py  gmag_nipr_old.py  gmag_wdc.py  gps_atec.py  gps_champ_fsi_nc.py  gps_cosmic_fsi_nc.py  gps_isee.py  gps_ro_rish.py  hf_tohokuu.py  ionosonde_rish.py  iprt.py  iprt_highres.py  irio_nipr.py  iug_load_aws_id.py  iug_load_aws_rish.py  iug_load_blr_id.py  iug_load_elf_hokudai.py  iug_load_kyushugcm.py  kyushugcm.py  lfrto.py  ltr_rish.py  meteor_rish.py  mf_rish.py  (+6 more)
iugonet/ground/.ipynb_checkpoints/: gps_atec-checkpoint.py
iugonet/ground/wdc/: ae.py  asy.py  dst.py  qddays.py  site.py  sym.py  wp_index.py
iugonet/ground/wdc/load/: iug_load_gmag_wdc_acknowledgement.py  load_ae_hour.py  load_ae_min.py  load_asy.py  load_dst.py  load_qddays.py  load_site_hour.py  load_site_min.py  load_sym.py  load_wp_index.py
iugonet/ground/wdc/load/download/: config.py  download_ae_min.py  download_dst.py  download_qddays.py  download_site.py  download_sym.py  download_wp_index.py
iugonet/iugonet_data/nipr/ask/tro/2018/: nipr_ask_tro_6300_20180218_v02.cdf
iugonet/iugonet_data/nipr/fmag/amb/1sec/2017/: nipr_1sec_fmag_amb_20170327_v02.cdf
iugonet/iugonet_data/nipr/fmag/h68/1sec/2017/: nipr_1sec_fmag_h68_20170327_v02.cdf
iugonet/iugonet_data/nipr/fmag/hus/02hz/2017/: nipr_02hz_fmag_hus_20170327_v02.cdf
iugonet/iugonet_data/nipr/fmag/ihd/1sec/2017/: nipr_1sec_fmag_ihd_20170327_v02.cdf
iugonet/iugonet_data/nipr/fmag/syo/1sec/2017/: nipr_1sec_fmag_syo_20170327_v02.cdf  nipr_1sec_fmag_syo_20170907_v02.cdf
iugonet/iugonet_data/nipr/fmag/tjo/02hz/2017/: nipr_02hz_fmag_tjo_20170327_v02.cdf
iugonet/tests/: test.py
iugonet/tools/: __init__.py  c_cor.py  change_point.py  cross_spec.py  difference_test.py  gmag_wdc_xyz.py  idl_compat.py  mann_whitney_test.py  nn.py  normality_test.py  pulsecode_eiscat.py  s_trans.py  tdeflag.py  tdegap.py  trend_test.py  udata_interpolation.py  uspec_coh.py  ustrans_pwrspc.py  welch_test.py
(+2 files in other folders)
