[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyudas"
version = "0.2.0"
description = "IUGONET plugin for pySPEDAS (Python port of UDAS)"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "IUGONET development team", email = "iugonet-contact@iugonet.org"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyspedas>=2.1.2",
    "numpy",
    "cdflib",
    "spacepy",
]

[project.urls]
Homepage = "https://github.com/iugonet/pyudas"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["iugonet*"]

[tool.setuptools.package-data]
"*" = ["*.md", "LICENSE"]
